# phanes

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
ecs/: Cargo.toml
ecs/src/: error.rs
examples/coordinates_showcase/: main.rs
examples/empty_window/: main.rs
examples/simple_triangle/: main.rs
examples/triangles/: main.rs
phanes_builtin/: Cargo.toml
phanes_core/: Cargo.toml
phanes_renderer/: Cargo.toml
phanes_scripting/: Cargo.toml
phanes_scripting/src/: lib.rs  main.rs
render_engine/: Cargo.toml
render_engine/src/: lib.rs  renderer.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
sandbox/: Cargo.toml
sandbox/src/: lib.rs  main.rs
src/: error.rs  lib.rs  main.rs  phanes.rs
src/app/: app.rs  mod.rs  render_object.rs  vertex.rs
src/builtin/: mod.rs  position.rs
src/builtin/render_objects/: triangle.rs
src/renderer/: mod.rs  render_object.rs  render_objects_manager.rs  renderer.rs  vertex.rs  window.rs
src/rendering_engine/: mod.rs  rendering_engine.rs
src/shaders/: default.wgsl
tests/: coordinates_test.rs
