[package]
name = "phanes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.40"
wgpu = "0.15.1"
winit = "0.28.3"
