[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
color-eyre = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
render_engine = { version = "0.1.0", path = "../render_engine" }
thiserror = "1.0.40"
